src/objects/Software_Download__c.object
<CustomObject>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AVeL</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>EMS CAD</fullName>
                </value>
                <value>
                    <fullName>FDC</fullName>
                </value>
                <value>
                    <fullName>Fusion ePCR</fullName>
                </value>
                <value>
                    <fullName>Fusion Online</fullName>
                </value>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>SBS</fullName>
                </value>
                <value>
                    <fullName>Sweet-Online</fullName>
                </value>
                <value>
                    <fullName>VisiNet</fullName>
                </value>
                <value>
                    <fullName>VisionAIR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Software Download</label>
    <nameField>
        <displayFormat>Download-{000000}</displayFormat>
        <label>Software Download Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Software Downloads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>